# CounterfactualRegretMinimizationPoker

./: .gitignore  CODE_VERGLEICH.md  MIGRATION_GUIDE.md  README.md  TENSOR_ERKLAERUNG.md  build_trees_new.sh  check_mps.py  delete_all_models.py  inspect_keys.py  install_pytorch_mps.sh  migration_example.py  mise.toml  plot_batch_eval.sh  plot_command  profile_batch_eval.sh  pyproject.toml  self_play.py  setup.py  setup_venv.sh  train_batch_eval.sh  train_flat_cfr.sh
advanced_python/Hausarbeit/: hausarbeit.tex
advanced_python/Motivationsschreiben/: motivation.tex
agents/: strategy_agent.py
config/: br_eval_schedules.json
docs/architecture/: DATA_ARCHITECTURE.md
envs/: __init__.py
evaluation/: best_response_agent.py  best_response_agent_v2.py  best_response_v3.py  build_public_state_tree.py  build_public_state_tree_v2.py  debug_best_response.py  debug_br_output.txt  test_best_response_v3.py
gui/: GUI_PLAN.md  agent_vs_agent.py  agent_vs_human.py  base_gui.py  human_vs_human.py  run_agent_vs_agent.py  run_agent_vs_human.py  run_client.py  run_server.py  test_agent_vs_human_layout.py  test_base_gui.py  test_base_gui_layout.py  test_card_visual.py  test_player_widget.py
src/: plot_best_response.py
src/tui/: app.py  (+3 more)
test_data/: TESTING_NOTES.md  test_results.csv
tests/: test_kuhn_poker.py  test_leduc_holdem.py  test_limit_holdem.py  test_nash_equilibrium.py  test_rhode_island.py  test_royal_holdem.py  test_twelve_card_poker.py
training/: cfr_plus_solver.py  cfr_solver.py  mccfr_solver.py  train.py
utils/: model_stats.py  poker_utils.py  test_logger.py
(+337 files in other folders)
