[build-system]
requires = ["setuptools>=70.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-cfr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=2.4.0",
    "pandas>=1.3.0",
    "pyqt6>=6.0.0",
    "pytest>=9.0.2",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "torch>=2.9.1",
    "textual>=0.70.0",
    "memray>=1.19.1",
]
